# ParenVault

./: .gitignore  README.md  ROADMAP.md  USER_GUIDE.md  _opam  config.example.toml  dune  dune-project  install.sh  parenvault.opam  pv
lib/aerc/: compose.ml  dune  maildir.ml
lib/config/: config.ml  dune
lib/domain/: dune  entity.ml  types.ml
lib/markdown/: dune  parser.ml
lib/storage/: db.ml  dune  queries.ml  schema.ml  sync.ml  task_repo.ml
lib/sync/: dune  engine.ml
lib/tui/: app.ml  dune  model.ml  update.ml  view.ml
scripts/: init_postgres.sql
